src/ClientSide/Design/VisualDesign.css
body{
    font-size: 1em;
    background-color: #f0efeb;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
h1{
    height: 50px;
    font-size: 60px;
    font-weight: bold;
    text-align: center;
    color: #000047;
    padding: 10px;
    font-family: 'Times New Roman', Times, serif;
}
#navBar{
    height: 30px;
    font-size: 10px;
    font-style: oblique;
    padding: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 3%;

}
p2{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 100px;

    .startbutton{
        border-radius: 12px;
        color: #f0efeb;
        margin-top: 4%;
    }   
}
#wrapperFactors{
    display: flex;
    justify-content: left;
    align-items: left;
    margin-top: 6%;
}
#CreateBoks{
    display: flex;
    justify-content: right;
    align-items: right;

    .CreateMazeButton {
        position: fixed;
        z-index: 500;
        color: #f0efeb;
        margin-right: 50px;
    }
}
/*Want to make the buttons look like they are more clickable*/
button:active {
    transform: translateY(2px);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

#output{
    justify-content: flex-end;
    margin-top: -3%;
    margin-left: 70px;
}
#output #Boks {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    width: 700px;
    height: 400px;
    border: 2px solid #8896a2;
    padding: 50px;
    box-sizing: border-box;
    margin: 3%;
    background-color: #d4e4f1;
}
#output #InfoBoks {
    justify-content: flex-end;
    width: 250px;
    height: 300px;
    border: 4px solid #8896a2;
    padding: 5px;
    box-sizing: border-box;
    margin: 0 0 0 auto;
    background-color: #d4e4f1;
}

/*Creating sliders for the parameter input*/
.wrapper {
    margin-left: 20px;
    display: flex;
    flex-direction: column;
    width: calc(100% - 20px);
}
#confirm {
    margin-top: 90px;
    display: block;
    height: 40px;
    width: 150px;
    background-color: #8896a2;
    color: #000047;
    font-weight: bolder;
    border: 2px solid #000047;
    border-radius: 12px;
}
.container {
    display: flex;
    align-items: left;
    justify-content: left;
    width: 100%;
    padding: 20px 0; 
}
.range-slider-container {
    width: 80%;
    position: relative;
    display: block;
}
/*Slider range for door parameter*/
#rangeDoor{
    width: 100%;
    position: absolute;
    top: 0;
    left: 0%;
    transform: none;
}
/*Slider range for branches parameter*/
#rangeBranches{
    width: 100%;
    position: absolute;
    top: 0;
    left: 0%;
    transform: none;
}
/*Slider range for Loops parameter*/
#rangeLoops{
    width: 100%;
    position: absolute;
    top: 0;
    left: 0%;
    transform: none;
}
/*Slider range for Straightness parameter*/
#rangeStraightness{
    width: 100%;
    position: absolute;
    top: 0;
    left: 0%;
    transform: none;
}
.percentage{
    background-color:#000047;
    display: inline-block;
    transform: translate(-50%, 230%) scale(0);
    width: 60px;
    height: 30px;
    border-bottom-left-radius: 100vw;
    border-bottom-right-radius: 100vw;
    position: absolute;
    left: 0;
    display: flex;
    align-items: center;
    justify-content: center;   
    transition: 200ms ease-in-out transform;
}
.percentage::before{
    content: '';
    position: absolute;
    border-bottom: 30px solid #000047;
    border-right: 30px solid transparent;
    border-left: 30px solid transparent;
    transform: translateY(-100%);
}
.percentage span {
    transform: translateY(-40%);
    color: #f0efeb;
    text-shadow: 0 0 .2rem rgba(0, 0, 0, .6);
}
.range-slider-container:hover .percentage {
    transform: translate(-50%, 230%) scale(1);

}

/*Boks for the generated maze to be printed into*/
#generatedOutput {
    position: fixed;
    top: 120px;       
    right: 5%;
    left: auto;
    transform: none;
    z-index: 300;
}
#generatedBoks {
    z-index: 400;
    width: min(600px, calc(100vw - 40px));
    height: 600px;
    background-color: transparent;
    border: 4px solid #a1aeb8;
    border-radius: 12px;
    padding: 50px;
    box-sizing: border-box;
}
#mazeCanvas {
    z-index: 500;
    width: min(600px, calc(100vw - 40px));
    height: 600px;
}

